--- a/notesApp/package.json
+++ b/notesApp/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "electron": "^8.2.5",
+    "electron-rebuild": "^1.11.0",
+    "mongoose": "^5.9.13",
     "prompt": "^1.0.0",
     "readline": "^1.3.0"
   }
