--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/create-react-class": "^15.6.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "create-react-class": "^15.6.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
@@ -33,12 +36,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.35",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8"
   },
   "proxy": "http://localhost:3000"
